# comp565-opengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake-format.yaml
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
cmake/: AddCatch2.cmake  AddGLFW.cmake  AddGLM.cmake  AddGTest.cmake  AddGlad.cmake  AddLinMath.cmake  C++Standards.cmake  CompilerOptions.cmake  Formatting.cmake
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
